--- a/src/app/modules/plan-agregar/membresias-agregar.component.html
+++ b/src/app/modules/plan-agregar/membresias-agregar.component.html
@@ -1,17 +1,17 @@
-<div class="container mt-4">
+<div>
     <ngx-spinner bdColor = "rgba(0, 0, 0, 0.8)" size = "medium" color = "#fff" type = "ball-pulse-sync" [fullScreen] = "true"><p style="color: white" > Cargando... </p></ngx-spinner>
-    <div class="responsive-div">
-        <div class="title">
-            <h1>Agregar Plan</h1>
-        </div>
+
+        <h1 class="title" mat-dialog-title>Agregar Plan</h1>
+        
+        <div mat-dialog-content>
             <form [formGroup]="formulariodePlan">
-                <div class="responsive-div">
-                <!--<div class="mi-div-con-borde responsive-div"></div>-->
+                <div>
                 <div style="color:red">{{message}}</div>
                     <br/>
                     <div class="row">
                         <div class="col-sm-6">
                             <p>
+                                <label>Nombre del plan:</label>
                                 <mat-form-field appearance="outline" style="width: 95%;" required>
                                     <mat-label>Nombre del plan:</mat-label>
                                     <input type="text" matInput placeholder="Titulo" autocomplete="off" id="titulo" formControlName="titulo">
@@ -26,6 +26,7 @@
                         </div>
                         <div class="col-sm-6">
                                 <p>
+                                    <label>Precio:</label>
                                     <mat-form-field appearance="outline"  style="width: 95%;" required>
                                         <mat-label>Precio</mat-label>
                                         <input type="number" placeholder="Precio" matInput autocomplete="off" id="precio" formControlName="precio" >
@@ -42,8 +43,29 @@
 
                     <div class="row">
                         <div class="col-sm-6">
+                            <label>Fecha inicio:</label>
+                            <mat-form-field appearance="outline" style="width: 95%;" required>
+                                <mat-label>Fecha inicio:</mat-label>
+                                <input matInput placeholder="Selecciona una fecha inicio" formControlName="fechaInicio" [matDatepicker]="picker1">
+                                <mat-datepicker-toggle matSuffix [for]="picker1"></mat-datepicker-toggle>
+                                <mat-datepicker #picker1></mat-datepicker>
+                            </mat-form-field>
+                        </div>
+                        <div class="col-sm-6">
+                            <label>Fecha fin:</label>
+                            <mat-form-field appearance="outline" style="width: 95%;" required>
+                                <mat-label>Fecha fin:</mat-label>
+                                <input matInput placeholder="Selecciona una fecha fin" formControlName="fechaFin" [matDatepicker]="picker2">
+                                <mat-datepicker-toggle matSuffix [for]="picker2"></mat-datepicker-toggle>
+                                <mat-datepicker #picker2></mat-datepicker>
+                            </mat-form-field>
+                        </div>
+                    </div>
+
+                    <div class="row">
+                        <div class="col-sm-6">
                             <p>
-                                <label for="detalles" class="large-text">Detalles:</label>
+                                <label>Detalles:</label>
                                 <mat-form-field style="display: inline-block; width: 95%; height: 110px;" required appearance="outline">
                                     <mat-label>Detalles</mat-label>
                                     <textarea class="textarea" matInput rows="4" placeholder="Detalles" cols="50" style="display: inline-block; width: 100%;height: 100%;" id="detalles" formControlName="detalles"> </textarea>
@@ -54,7 +76,8 @@
                         </div>
                         <div class="col-sm-6">
                             <p>
-                                <mat-form-field>
+                                <label>Membresías:</label>
+                                <mat-form-field appearance="outline" style="width: 95%;" required>
                                     <mat-label>Selecciona una membresía</mat-label>
                                     <mat-select [(value)]="selectedMembresia" multiple formControlName="membresias"> 
                                       <mat-option *ngFor="let membresia of plan" [value]="membresia">
@@ -67,7 +90,7 @@
                         </div>
                        
                     </div>
-                    <div class="row">
+                    <!--<div class="row">
                         <div class="col-sm-6">
                             <p>
                                 <mat-form-field>
@@ -77,32 +100,14 @@
                             </p>
 
                         </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-sm-6">
-                            <mat-form-field appearance="outline">
-                                <mat-label>Fecha inicio:</mat-label>
-                                <input matInput placeholder="Selecciona una fecha inicio" formControlName="fechaInicio" [matDatepicker]="picker1">
-                                <mat-datepicker-toggle matSuffix [for]="picker1"></mat-datepicker-toggle>
-                                <mat-datepicker #picker1></mat-datepicker>
-                            </mat-form-field>
-                        </div>
-                        <div class="col-sm-6">
-                            <mat-form-field appearance="outline">
-                                <mat-label>Fecha fin:</mat-label>
-                                <input matInput placeholder="Selecciona una fecha fin" formControlName="fechaFin" [matDatepicker]="picker2">
-                                <mat-datepicker-toggle matSuffix [for]="picker2"></mat-datepicker-toggle>
-                                <mat-datepicker #picker2></mat-datepicker>
-                            </mat-form-field>
-                        </div>
-                    </div>
-                    <div style="display: flex; justify-content: center;">
-                        <button mat-stroked-button (click)="enviar()" style="background-color: #fd9727; font-size: 20px; margin-top: 17px; height: 40px; margin-right: 90px;">Aceptar</button>
-                        <button mat-stroked-button (click)="cerrarDialogo()" style="background-color: #000000; font-size: 20px; margin-top: 17px; height: 40px;color: white;">Cancelar</button>
-                      </div>          
+                    </div>  -->    
                 </div>
             </form>
-    </div>
+        </div>
+        <div style="display: flex; justify-content: center;" mat-dialog-actions>
+            <button mat-stroked-button (click)="enviar()" style="background-color: #fd9727; font-size: 20px; margin-top: 17px; height: 40px; margin-right: 90px;">Aceptar</button>
+            <button mat-stroked-button (click)="cerrarDialogo()" style="background-color: #000000; font-size: 20px; margin-top: 17px; height: 40px;color: white;">Cancelar</button>
+        </div>  
 </div>
 
 
