--- a/src/app/modules/alta-colaboradores/alta-colaboradores.component.css
+++ b/src/app/modules/alta-colaboradores/alta-colaboradores.component.css
@@ -87,3 +87,11 @@
     font-size: x-small;
     font-weight: bold;
 }
+
+.title {
+    background-color: #eeeded;
+    padding: 12px;
+    text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: 700;
+  }
