--- a/src/app/modules/dialog-select-membership/dialog-select-membership.component.css
+++ b/src/app/modules/dialog-select-membership/dialog-select-membership.component.css
@@ -5,8 +5,12 @@
 }
 
 .title {
+    background-color: #eeeded;
+    padding: 12px;
     text-align: center;
-}
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: 700;
+  }
 
 .options {
     display: flex;
