--- a/src/app/modules/editar-colaborador/editar-colaborador.component.css
+++ b/src/app/modules/editar-colaborador/editar-colaborador.component.css
@@ -86,3 +86,11 @@
     font-size: x-small;
     font-weight: bold;
 }
+
+.title {
+    background-color: #eeeded;
+    padding: 12px;
+    text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: 700;
+  }
