--- a/src/app/modules/entradas/entradas.component.css
+++ b/src/app/modules/entradas/entradas.component.css
@@ -109,3 +109,11 @@
 .table tbody tr:nth-child(even) {
     background-color: #f9f9f9;
  }
+
+ .title {
+    background-color: #eeeded;
+    padding: 12px;
+    text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: 700;
+  }
