--- a/src/app/modules/plan-editar/membresias-editar.component.css
+++ b/src/app/modules/plan-editar/membresias-editar.component.css
@@ -45,4 +45,12 @@
     width:100%;
     margin-top: 280px;
    }
+
+   .title {
+    background-color: #eeeded;
+    padding: 10px;
+    text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: 700;
+  }
   
